# github-agent-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SETUP.md  copilot-instructions.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: lint.yml  release.yml  tests.yml
agent_state/: issues.json
docs/: api.rst  architecture.rst  conf.py  contributing.rst  index.rst  usage.rst
examples/: README.md  basic_usage.py
planning/issue_templates/: gap-analysis.md  review-complexity.md  review-consumption.md  system-capabilities-after-pr-merge.md  system-capabilities-refresh.md
planning/state/: system_capabilities.md
scripts/: README.md  verify-ci.sh
src/github_agent_orchestrator/: __init__.py  cli.py  github_labels.py
src/github_agent_orchestrator/core/: __init__.py  config.py  orchestrator.py
src/github_agent_orchestrator/github/: __init__.py  client.py
src/github_agent_orchestrator/llm/: __init__.py  factory.py  llama_provider.py  openai_provider.py  provider.py
src/github_agent_orchestrator/orchestrator/: __init__.py  config.py  issue_queue_completion.py  logging.py  main.py  system_capabilities_after_merge.py
src/github_agent_orchestrator/orchestrator/github/: __init__.py  client.py  issue_service.py
src/github_agent_orchestrator/orchestrator/planning/: __init__.py  issue_queue.py
src/github_agent_orchestrator/orchestrator/workflow/: __init__.py  actions.py  cognitive_tasks.py  events.py  policy.py  state_machine.py
src/github_agent_orchestrator/server/: __init__.py  __main__.py  app.py  config.py  dashboard_router.py  dashboard_store.py  job_store.py  main.py  models.py  monitor_runner.py
src/github_agent_orchestrator/server/templates/: gap-analysis.md
src/github_agent_orchestrator/state/: __init__.py  manager.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_dashboard_api.py  test_github_url_normalization.py  test_issue_queue.py  test_issue_queue_completion.py  test_issue_service.py  test_llm.py  test_phase1_config.py  test_state.py  test_system_capabilities_after_merge.py  test_workflow_actions.py  test_workflow_state_machine.py
ui/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.eslint.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/playwright/tests/: dashboard.spec.ts
ui/src/: App.tsx  api.ts  main.tsx  styles.css  vite-env.d.ts
ui/src/app/: App.tsx  colorMode.tsx  colorModeContext.ts  routes.tsx  theme.ts
ui/src/app/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx  layoutConstants.ts
ui/src/components/: ConfirmDialog.tsx  EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  StatusChip.tsx  Timestamp.tsx  TypeChip.tsx
ui/src/features/cognitiveTasks/: CognitiveTaskEditorDrawer.tsx  CognitiveTaskForm.tsx  CognitiveTaskRunDialog.tsx  CognitiveTasksList.tsx  cognitiveTaskDraft.ts  cognitiveTaskTypes.ts
ui/src/features/issues/: IssueTable.tsx  issueTypes.ts
ui/src/features/planning/: DocViewer.tsx  planningTypes.ts
ui/src/features/rules/: RuleEditorDrawer.tsx  RuleForm.tsx  RuleRunDialog.tsx  RulesList.tsx  ruleDraft.ts  ruleTypes.ts
ui/src/features/timeline/: TimelineFeed.tsx  TimelineItem.tsx  timelineTypes.ts
ui/src/mocks/: handlers.ts
ui/src/mocks/fixtures/: docs.json  issues.json  rules.json  timeline.json
ui/src/pages/: ActiveWorkPage.tsx  CognitiveTasksPage.test.tsx  CognitiveTasksPage.tsx  IssuesPage.test.tsx  IssuesPage.tsx  LoopPage.test.tsx  LoopPage.tsx  NotFoundPage.tsx  OverviewPage.tsx  PlanningDocsPage.tsx  RulesPage.test.tsx  RulesPage.tsx  TimelinePage.test.tsx  TimelinePage.tsx
ui/tests/: setupTests.ts  testUtils.tsx
